# hyperswitch

.github/workflows/: autonomous_orchestrator_ci.yml
config/: autonomous_orchestrator.toml
crates/analytics/: Cargo.toml
crates/autonomous_orchestrator/: ARCHITECTURE.md  Cargo.toml  QUICKSTART.md  README.md
crates/autonomous_orchestrator/examples/: basic_usage.rs
crates/autonomous_orchestrator/src/: analytics.rs  anomaly_detector.rs  config.rs  decision_engine.rs  event_monitor.rs  health.rs  main.rs  models.rs  resource_manager.rs  routes.rs  self_healing.rs  state.rs  tests.rs  types.rs  utils.rs
crates/common_utils/: Cargo.toml
crates/drainer/: Cargo.toml
crates/external_services/: Cargo.toml
crates/injector/: Cargo.toml
crates/redis_interface/: Cargo.toml
crates/router/: Cargo.toml
crates/router_env/: Cargo.toml
crates/scheduler/: Cargo.toml
crates/storage_impl/: Cargo.toml
crates/test_utils/: Cargo.toml
cypress-tests/: package-lock.json
cypress-tests-v2/: package-lock.json
docker/: autonomous_orchestrator.Dockerfile  docker-compose.autonomous.yml
migrations/2025-11-18-100000_autonomous_orchestrator_tables/: down.sql  up.sql
monitoring/: prometheus.autonomous.yml
monitoring/grafana/dashboards/: autonomous_orchestrator.json
