[package]
name = "autonomous_orchestrator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["kv_store", "olap", "analytics"]
olap = ["storage_impl/olap", "hyperswitch_domain_models/olap"]
analytics = []
kv_store = []
email = ["external_services/email"]
v1 = ["diesel_models/v1", "hyperswitch_domain_models/v1", "storage_impl/v1", "common_utils/v1", "common_types/v1"]
v2 = ["diesel_models/v2", "hyperswitch_domain_models/v2", "storage_impl/v2", "common_utils/v2", "common_types/v2"]

[dependencies]
# Third party crates
async-trait = "0.1.88"
error-stack = "0.4.1"
futures = "0.3.31"
num_cpus = "1.16.0"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.69"
time = { version = "0.3.41", features = ["serde", "serde-well-known", "std"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tracing = { workspace = true }
actix-web = "4.11.0"
actix-rt = "2.10.0"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
dashmap = "6.1.0"
parking_lot = "0.12.3"
lru = "0.12.5"
ring = "0.17.8"
chrono = { version = "0.4.40", features = ["serde"] }

# ML/Stats libraries
ndarray = { version = "0.16.1", features = ["serde"] }
smartcore = { version = "0.3.2", features = ["serde"] }

# First party crates
common_utils = { version = "0.1.0", path = "../common_utils", features = ["signals", "async_ext"] }
common_types = { version = "0.1.0", path = "../common_types" }
common_enums = { version = "0.1.0", path = "../common_enums" }
diesel_models = { version = "0.1.0", path = "../diesel_models", features = ["kv_store"], default-features = false }
external_services = { version = "0.1.0", path = "../external_services" }
hyperswitch_domain_models = { version = "0.1.0", path = "../hyperswitch_domain_models", default-features = false }
hyperswitch_interfaces = { version = "0.1.0", path = "../hyperswitch_interfaces" }
redis_interface = { version = "0.1.0", path = "../redis_interface" }
router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"] }
storage_impl = { version = "0.1.0", path = "../storage_impl", default-features = false }
api_models = { version = "0.1.0", path = "../api_models" }
events = { version = "0.1.0", path = "../events" }

[dev-dependencies]
tokio-test = "0.4.4"

[[bin]]
name = "autonomous_orchestrator"
path = "src/main.rs"

[lints]
workspace = true
